--- a/eci-289I-latex-template/eci-289I-latex-template/eci289I-refs.bib
+++ b/eci-289I-latex-template/eci-289I-latex-template/eci289I-refs.bib
@@ -1,29 +1,25 @@
-@Article{ hanke:dfwudc,
-	AUTHOR = "Author, A. and Author, B.",
-	JOURNAL = "Some Journal",
+@article{ MRTASOFA,
+	AUTHOR = "Alaa Khamis, Ahmed Hussein and Ahmed Elmogy",
+	JOURNAL = "Some Cooperative Robots and Sensor Networks 2015",
+	PAGES = "31-51",
+	TITLE = "Multi-robot Task Allocation: A Review of the State-of-the-Art",
+	VOLUME = "vol 7",
 	KEY = "ANDE",
-	PAGES = "275-308",
-	TITLE = "Random Thoughts",
-	VOLUME = "9",
-	YEAR = "1992"
+	YEAR = "2015"
 }
 
-@InBook{ churchman:itor,
-	AUTHOR = "Author, A.",
-	CHAPTER = "Randomly thinking about something",
-	KEY = "BARS",
-	PAGES = "76-121",
-	PUBLISHER = "Random Publishers",
-	TITLE = "About Randomness and Thinking",
-	YEAR = "1989"
+@article{sedighpour2012effective,
+	title={An effective genetic algorithm for solving the multiple traveling salesman problem},
+	author={Sedighpour, Mohammad and Yousefikhoshbakht, Majid and Mahmoodi Darani, Narges},
+	journal={Journal of Optimization in Industrial Engineering},
+	number={8},
+	pages={73--79},
+	year={2012}
 }
 
-@InProceedings{ berry:teomowcihbsi,
-	AUTHOR = "Author, A. and Author, C.",
-	BOOKTITLE = "Proceedings of Random Thoughts PRT 2001",
-	KEY = "BISW",
-	PAGES = "591-595",
-	TITLE = "Random by chance",
-	YEAR = "1991"
+@misc{wikiwebTSP,
+	title = {Traveling sales man problem},
+	month = "Dec",
+	year = "2016",
+	note = "\verb+https://en.wikipedia.org/wiki/Travelling_salesman_problem+"}
 }
-
