--- a/eci-289I-latex-template/eci-289I-latex-template/eci289I-paper.tex
+++ b/eci-289I-latex-template/eci-289I-latex-template/eci289I-paper.tex
@@ -20,69 +20,52 @@
 
 
 
-\title{Paper Title: 18 pt Arial Bold, Upper and Lower Case}
+\title{Multi Robots Task Assignments Problems Solved by Genetic Algorithm}
 
 %Authors Names and Affiliations:  Two spaces below the title, 10 pt
 %Arial, Upper and Lower Case, underline author presenting
 %paper and  provide his/her email address
 
-\author{\underline{A. Author}
-\address[A1]{\it{A affiliation,
-GPO Box 123,
-Somewhere, SomeCountry (AuthorA@email.zz, AuthorC@email.zz)}}, B.
-Author\address[B1]{\it{B affiliation,
-GPO Box 987,
-Somewhere else, SomeCountry (AuthorB@email.zz, AuthorD@email.zz)}}, C.
-Author\addressmark[A1] and D.
-Author\addressmark[B1]}
+\author{\underline{Chen Peng}
+\address[A1]{\it{Mechanical and Aerospace Engineering Department,
+UC, Davis, US (penchen@ucdavis.edu, )}}}
 
 \begin{document}
 %\linenumbers
 
 \begin{abstract}
-The abstract should be self-contained and explicit, setting out
-the ground covered and the principal conclusions reached and
-should be \textbf{one paragraph}.  The suggested length is 300 words.
-The abstract must start 2 cm below Authors Affiliations and span
-the full width of the page.  The format is 10 pt Arial,
-fully justified.
+This term paper mainly uses genetic algorithm to solve the multi robots task assignment(MRTA) problems in two situations. We assume that each robot can go directly from one point to another and the distance is just the euclidean distance between two points. One task only needs one robot in one assignment and all tasks need to be visited in one task execution. In the first situation, we have the same amounts of robots as the tasks (m vs m), while in the second condition, we have less robots than tasks. The objective function of both problems is to find the shortest summary distances of all the robots to go over all task points. 
 \end{abstract}
 \begin{keyword}
-Start keywords one space below the abstract and provide 3 to 5
-keywords separated by semicolons.
+MRTA, genetic algorithm, TSP, mTSP
 \end{keyword}
 
 \maketitle
 
 
-\section{Body of Paper}
+\section{Introduction}
 
-Main headings are Caps, Bold.  Text must flow in one column spreading the text over the full width of the page.  All
-text is 10 pt Arial, fully justified. Leave 2 spaces above
-and one space below headings and sub-headings
+Multi-robot systems (MRS) are a group of robots that are designed
+aiming to perform some collective behavior.One of the most challenging problems of MRS is how to optimally assign a set of robots to a set of tasks in such a way that optimizes the overall system performance subject to a set of constraints.This problem is known as Multi-robot Task Allocation (MRTA) problem \cite{MRTASOFA}. In the first situation, we want to match each robot with one particular task so that the total distance is shortest. This is very similar to the classic problem of traveling salesman problem: "Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city exactly once and returns to the origin city?"\cite{wikiwebTSP} In the second condition, we consider less robots to visit more tasks. This problem is very similar to mTSP problem: The multiple traveling salesman problem (MTSP) involves scheduling m \textless 1 salesmen to visit a set of n \textgreater m nodes so that each node is visited exactly once.\cite{sedighpour2012effective} 
 
-\subsection{Introduction}
-
-Secondary headings (sub-headings) are Upper and Lower Case, Bold.
-Second level sub-headings are Upper and Lower Case, Italics, and its use it is not recommended.
-
-The main purpose of an introduction is to enable the paper to be understood without undue reference to other sources.  It should therefore have sufficient background material for this purpose.  Generally, highly specialised papers will not need an extensive introduction as interested readers may be expected to be familiar with current literature on the subject.  On the other hand, when a paper is likely to interest people working in fields outside the immediate area of the paper, the introduction should contain background material which could otherwise be scattered throughout the literature.
-
-\subsection{Headers and Footers}
-
-Header of the first page should be as appears in this instructions' paper (right justified). Headers of following pages should be: the name of the authors (initial(s) and name) / title of the paper (centered). If there are more than two authors write first author et al. If the title is too long, cut the title where needed and put three dots. Headers text should be in italics 8 pt. Arial.
-No footer should appear. \textbf{Do not} number the pages. Numbering of the pages will be done by the editors of the Proceedings.
+\section{m robots m tasks}
+In the first situation, 
 
 
-\subsection{Equations}
-Equations should be numbered consecutively as they appear in the
-text with Arabic numerals and should be referred to by their
-numbers only, e.g. (3).  Equations must be typed not hand printed.
-About 5 mm should be left clear above and below each equation.
+\subsection{Genetic algorithm model}
+
+%Header of the first page should be as appears in this instructions' paper (right justified). Headers of following pages should be: the name of the authors %(initial(s) and name) / title of the paper (centered). If there are more than two authors write first author et al. If the title is too long, cut the title where %needed and put three dots. Headers text should be in italics 8 pt. Arial.
+%No footer should appear. \textbf{Do not} number the pages. Numbering of the pages will be done by the editors of the Proceedings.
 
 
-\subsection{Figures and Photographs}
-Figures must be of high quality and can be in colour for the conference proceedings. Figure numbers and captions appear at the foot of the figures. To save space, you can allocate figures and captions only in the right/left hand side of the page, so that the text will be limited to the other hand side of the page. Figures should be numbered consecutively with Arabic numerals, in the order in which reference is made to them in the text.
+\subsection{Small numbers trial}
+%Equations should be numbered consecutively as they appear in the
+%text with Arabic numerals and should be referred to by their
+%numbers only, e.g. (3).  Equations must be typed not hand printed.
+%About 5 mm should be left clear above and below each equation.
+
+
+\subsection{Large numbers solving}
 
 % An example of how to reference a figure using its label:
 %, e.g. Figure \ref{fig1}, Figure 2, etc.
@@ -100,92 +83,59 @@ Figures must be of high quality and can be in colour for the conference proceedi
 
 Photographs should only be used if essential to the clarity of the paper.  If used they must be with clear contrast and highly glossed.
 
-\subsection{Tables}
-Table numbers and captions appear at the top of the tables. To save space, you can allocate tables and captions only in the right/left hand side of the page, so that the text will be limited to the other hand side of the page. Tables should be numbered consecutively with Arabic numerals, in the order in which reference is made to them in the text, e.g. Table 1, Table 2, etc.
+\subsection{Complexity of algorithm}
+%able numbers and captions appear at the top of the tables. To save space, you can allocate tables and captions only in the right/left hand side of the page, so %that the text will be limited to the other hand side of the page. Tables should be numbered consecutively with Arabic numerals, in the order in which reference %is made to them in the text, e.g. Table 1, Table 2, etc.
 
-\subsection{Conclusions and Recommendations}
+%\subsection{Conclusions and Recommendations}
 
-The real value of a paper is reflected in the nature, soundness
-and clarity of the conclusions, so particular care should be taken
-with this section.
+%The real value of a paper is reflected in the nature, soundness
+%and clarity of the conclusions, so particular care should be taken
+%with this section.
 
 \section{Notation and Units}
 
-If the paper makes extensive use of symbols or other special
-nomenclature they should be listed and defined under this heading.
-Otherwise, all symbols are to be defined when first used.  All
-units are to be SI (metric).
+%If the paper makes extensive use of symbols or other special
+%nomenclature they should be listed and defined under this heading.
+%Otherwise, all symbols are to be defined when first used.  All
+%units are to be SI (metric).
 
 
-\section{Criteria for Acceptance}
+\section{m robots n tasks(m \textless n)}
 
-\subsection{Length and Other Details}
+\subsection{Local search}
 
-\underline{Full session papers} should not exceed \textbf{8 A4 camera-ready pages}. Longer papers are allowed at the discretion of session organizers. Please coordinate longer papers with them. All session papers will be independently refereed, and could be accepted or could not be accepted.
+%\underline{Full session papers} should not exceed \textbf{8 A4 camera-ready pages}. Longer papers are allowed at the discretion of session organizers. Please coordinate longer papers with them. All session papers will be independently refereed, and could be accepted or could not be accepted.
 
-\subsection{Permission to Publish}
-Unless informed by the author to the contrary, the Society will
-assume that a paper submitted has not been published or offered
-elsewhere and is not the property of any other person or body.
+\subsection{Robot initial alignment}
 
-It is the author's responsibility to obtain any necessary
-permission from his/her organisation or from any other person or
-body for the publication of a paper or any material in it; such
-permission need not be mentioned in the acknowledgments.
 
-\section{Presentation of Paper at the Congress}
+\subsection{mTSP solver}
 
-\subsection{Slides and Transparencies}
-Projected diagrams are intended to assist the oral presentation of
-a paper and should be prepared specifically for this purpose. They
-should allow only essential information but this should be
-technically correct.
+%\section{Presentation of Paper at the Congress}
 
-Line thickness should show clear contrasts.  As a general rule,
-the original drawing should be clearly legible when viewed from a
-distance of six times its longest side. Graphs and curves are
-projected primarily to show tendencies and relationships rather
-than to determine numerical values.  Grid lines should therefore
-be minimised or replaced by simple scales running along the axes.
-The curves themselves should be the prominent feature.
+%\subsection{Slides and Transparencies}
+%Projected diagrams are intended to assist the oral presentation of
+%a paper and should be prepared specifically for this purpose. They
+%should allow only essential information but this should be
+%technically correct.
 
-\subsection{Transparencies}
+%Line thickness should show clear contrasts.  As a general rule,
+%the original drawing should be clearly legible when viewed from a
+%distance of six times its longest side. Graphs and curves are
+%projected primarily to show tendencies and relationships rather
+%than to determine numerical values.  Grid lines should therefore
+%be minimised or replaced by simple scales running along the axes.
+%The curves themselves should be the prominent feature.
 
-Transparencies for overhead projection could be used.
+%\subsection{Transparencies}
 
-\subsection{Powerpoint or Similar Presentation}
-
-Equipment for electronic projection on a beamer will be available.
-
-\section{Registration}
-
-At least one of the authors should be registered for final
-acceptance of the paper and its inclusion in the Congress
-Proceedings.
-
+%Transparencies for overhead projection could be used.
 
 \section*{Acknowledgments}
 Any particular assistance out of the ordinary may be acknowledged.  Please, do not use the numeral for the acknowledgements section. It is not necessary from the organisers' point of view to record the permission of the author's organisation to publish the paper or the information contained therein.
 
 \section*{References}
 
-Do not use the numeral for the references section.
-
-\subsection*{Style}
-References should include (in the following order): Author Name(s), Initials, Title of article with first letter uppercase, full Journal name in Italics, Volume (Number), page range, date.  The page range must be hyphenated. A 4 mm indentation must be left for each reference. An example of a reference in a conference paper is given below.
-
-\subsection*{Order}
-
-The references must be listed in alphabetical order of author's
-names and increasing dates of publication, with the addition of an
-'a' or 'b' to the date, where necessary.  In the text reference is
-made to writing the surname of the author, followed by the date of
-publication in square brackets, e.g. "it was shown by
-\citet{hanke:dfwudc} that ...". Where more than two authors are
-involved, the reference in the text should be of the form: "it was
-shown by \citet{churchman:itor}".
-
-It was shown by \citet{berry:teomowcihbsi} that...
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{eci289I}
@@ -193,9 +143,6 @@ It was shown by \citet{berry:teomowcihbsi} that...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Appendices}
-If more than one, appendices should be lettered A, B, etc., e.g.
-Appendix A.
-
 
 
 
