--- a/eci-289I-latex-template/eci-289I-latex-template/eci289I-refs.bib
+++ b/eci-289I-latex-template/eci-289I-latex-template/eci289I-refs.bib
@@ -16,6 +16,35 @@
 	pages={73--79},
 	year={2012}
 }
+@article{johnson1989optimization,
+	title={Optimization by simulated annealing: an experimental evaluation; part I, graph partitioning},
+	author={Johnson, David S and Aragon, Cecilia R and McGeoch, Lyle A and Schevon, Catherine},
+	journal={Operations research},
+	volume={37},
+	number={6},
+	pages={865--892},
+	year={1989},
+	publisher={INFORMS}
+}
+
+@article{steinerberger2015new,
+	title={New bounds for the traveling salesman constant},
+	author={Steinerberger, Stefan},
+	journal={Advances in Applied Probability},
+	volume={47},
+	number={01},
+	pages={27--36},
+	year={2015},
+	publisher={Cambridge Univ Press}
+}
+
+@Book{ Luke2013Metaheuristics,
+	author = { Sean Luke },
+	title = { Essentials of Metaheuristics},
+	edition = { second },
+	year = { 2013 },
+	publisher = { Lulu },
+	note = { Available for free at http://cs.gmu.edu/$\sim$sean/book/metaheuristics/ }}
 
 @misc{wikiwebTSP,
 	title = {Traveling sales man problem},
