--- a/eci-289I-latex-template/eci-289I-latex-template/eci289I-paper.tex
+++ b/eci-289I-latex-template/eci-289I-latex-template/eci289I-paper.tex
@@ -4,7 +4,7 @@
 \usepackage{natbib}
 \usepackage[labelfont=bf,textfont=sf,labelsep=period]{caption} 
 %\RequirePackage{lineno} % for line numbers
-
+\usepackage{listings}
 \pdfpagewidth=210 true mm
 \pdfpageheight=297 true mm
 
@@ -16,11 +16,11 @@
 \pagestyle{IEMSSheadings}
 
 % Text to appear in the header of the pages
-\IEMSShead{Author1 et al. / A Not Specially Very Long Title}
+\IEMSShead{Chen Peng / MRTA solved by GA }
 
 
 
-\title{Multi Robots Task Assignments Problems Solved by Genetic Algorithm}
+\title{Multi Robots Task Assignments Problems Solved by Evolutionary Algorithm}
 
 %Authors Names and Affiliations:  Two spaces below the title, 10 pt
 %Arial, Upper and Lower Case, underline author presenting
@@ -37,7 +37,7 @@ UC, Davis, US (penchen@ucdavis.edu, )}}}
 This term paper mainly uses genetic algorithm to solve the multi robots task assignment(MRTA) problems in two situations. We assume that each robot can go directly from one point to another and the distance is just the euclidean distance between two points. One task only needs one robot in one assignment and all tasks need to be visited in one task execution. In the first situation, we have the same amounts of robots as the tasks (m vs m), while in the second condition, we have less robots than tasks. The objective function of both problems is to find the shortest summary distances of all the robots to go over all task points. 
 \end{abstract}
 \begin{keyword}
-MRTA, genetic algorithm, TSP, mTSP
+MRTA, evolutionary algorithm, TSP, mTSP
 \end{keyword}
 
 \maketitle
@@ -49,92 +49,76 @@ Multi-robot systems (MRS) are a group of robots that are designed
 aiming to perform some collective behavior.One of the most challenging problems of MRS is how to optimally assign a set of robots to a set of tasks in such a way that optimizes the overall system performance subject to a set of constraints.This problem is known as Multi-robot Task Allocation (MRTA) problem \cite{MRTASOFA}. In the first situation, we want to match each robot with one particular task so that the total distance is shortest. This is very similar to the classic problem of traveling salesman problem: "Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city exactly once and returns to the origin city?"\cite{wikiwebTSP} In the second condition, we consider less robots to visit more tasks. This problem is very similar to mTSP problem: The multiple traveling salesman problem (MTSP) involves scheduling m \textless 1 salesmen to visit a set of n \textgreater m nodes so that each node is visited exactly once.\cite{sedighpour2012effective} 
 
 \section{m robots m tasks}
-In the first situation, 
+In the first situation, we assume that the robots are just equal to the amount of tasks and we want to choose the optimal task allocations to make minimum the total distances of all the robots will go over. If we solve this problem by exhaustive permutation of all the robots (or tasks), it will be a NP hard problem and the complexity is O(n$!$). Therefore, we need to choose other methods to decrease the computation complexity to make the problem solvable in high dimension.
 
 
-\subsection{Genetic algorithm model}
+\subsection{Evolutionary algorithm model}
 
-%Header of the first page should be as appears in this instructions' paper (right justified). Headers of following pages should be: the name of the authors %(initial(s) and name) / title of the paper (centered). If there are more than two authors write first author et al. If the title is too long, cut the title where %needed and put three dots. Headers text should be in italics 8 pt. Arial.
-%No footer should appear. \textbf{Do not} number the pages. Numbering of the pages will be done by the editors of the Proceedings.
+In the process of finding optimal result, we use the method of Hill-Climbing. This technique is related to gradient ascent, but it does not require you to know the strength of the gradient or even its direction: you just iteratively test new candidate solutions in the region of your current candidate, and adopt the new ones if they’re better. This enables you to climb up the hill until you reach a local optimum.\cite{Luke2013Metaheuristics} At the same time, we also need to try the global random searching to avoid the local optimal. Here we use the method of simulated annealing to sometimes accept worse solutions with a certain probability and this probability decreases over time based on 'initial temperature' and 'cooling schedule'\cite{johnson1989optimization}.
 
 
 \subsection{Small numbers trial}
-%Equations should be numbered consecutively as they appear in the
-%text with Arabic numerals and should be referred to by their
-%numbers only, e.g. (3).  Equations must be typed not hand printed.
-%About 5 mm should be left clear above and below each equation.
-
+To test the convergence effect and speed of our algorithm, we use exhaustive way to obtain the global minimum to testify the convergence of our algorithm.
+\begin{center}
+	\begin{tabular}[c]{ |c|c|c| } 
+		\hline
+		Num of pairs & Global minimum & Optimal searched\\
+		\hline 
+		5   & 23.6015 & 23.6015 \\ \hline 
+		8   & 21.781  & 22.1582 \\ \hline
+		10  & 37.531  & 37.531  \\ \hline
+		12  & 66.469  & 66.73   \\ \hline
+	\end{tabular}
+\end{center}
+We can also visualize the result and show the converging process in Figure \ref{fig1}.
+ \begin{figure}[h]
+ \centering
+ \includegraphics[width=10cm]{Pictures/N10.png}
+ \caption{Visualization of task assignment and searching convergence} 
+ \label{fig1}
+ \end{figure}
 
 \subsection{Large numbers solving}
-
-% An example of how to reference a figure using its label:
-%, e.g. Figure \ref{fig1}, Figure 2, etc.
-
-% This is how to include a figure
-% Note that you can also include vector formats (for example PDF or EPS)
-
-% \begin{figure}[h]
-% \centering
-% \includegraphics[width=10cm]{Banner13b.jpg}
-% \caption{A nice caption text.} 
-% \label{fig1}
-% \end{figure}
-
-
-Photographs should only be used if essential to the clarity of the paper.  If used they must be with clear contrast and highly glossed.
+Photographs should only be used if essential to the clarity of the paper. If used they must be with clear contrast and highly glossed.
 
 \subsection{Complexity of algorithm}
-%able numbers and captions appear at the top of the tables. To save space, you can allocate tables and captions only in the right/left hand side of the page, so %that the text will be limited to the other hand side of the page. Tables should be numbered consecutively with Arabic numerals, in the order in which reference %is made to them in the text, e.g. Table 1, Table 2, etc.
+The best upper bound should be very similar to TSP problem. If we set the search range at $[$1,1$]$, then we can use the equation from \cite{steinerberger2015new}. The equation list below:
+	\[L =\beta\sqrt{n}\] 
+$\beta$ is equal to 0.92
 
-%\subsection{Conclusions and Recommendations}
-
-%The real value of a paper is reflected in the nature, soundness
-%and clarity of the conclusions, so particular care should be taken
-%with this section.
-
-\section{Notation and Units}
-
-%If the paper makes extensive use of symbols or other special
-%nomenclature they should be listed and defined under this heading.
-%Otherwise, all symbols are to be defined when first used.  All
-%units are to be SI (metric).
 
 
 \section{m robots n tasks(m \textless n)}
 
-\subsection{Local search}
-
-%\underline{Full session papers} should not exceed \textbf{8 A4 camera-ready pages}. Longer papers are allowed at the discretion of session organizers. Please coordinate longer papers with them. All session papers will be independently refereed, and could be accepted or could not be accepted.
-
 \subsection{Robot initial alignment}
+We can make the initial alignment of the robots to make it as average distributed in the map as possible. In this way, each robot can more likely choose similar amount of tasks and the efficiency of the whole system can be more efficient.
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=8cm]{Pictures/spacefilling.png}
+	\caption{Visualization of task assignment and searching convergence} 
+	\label{figspacefilling}
+\end{figure}
+\subsection{Local search}
+At first, we make each task to choose the robot which is nearest to it and then we can obtain the task assignments for each robot. This "Local search" is to meet the requirement that each task is only need one robot to be visited. 
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=10cm]{Pictures/taskallocation.png}
+	\caption{Visualization of task assignment and searching convergence} 
+	\label{figtaskallocation}
+\end{figure}
 
-
-\subsection{mTSP solver}
-
-%\section{Presentation of Paper at the Congress}
-
-%\subsection{Slides and Transparencies}
-%Projected diagrams are intended to assist the oral presentation of
-%a paper and should be prepared specifically for this purpose. They
-%should allow only essential information but this should be
-%technically correct.
-
-%Line thickness should show clear contrasts.  As a general rule,
-%the original drawing should be clearly legible when viewed from a
-%distance of six times its longest side. Graphs and curves are
-%projected primarily to show tendencies and relationships rather
-%than to determine numerical values.  Grid lines should therefore
-%be minimised or replaced by simple scales running along the axes.
-%The curves themselves should be the prominent feature.
-
-%\subsection{Transparencies}
-
-%Transparencies for overhead projection could be used.
+\subsection{MRTA solver}
+After each robot obtain their task allocation. We can use the TSP method to calculate the minimum distance of each robots will go over their tasks. The result can be visualized in Figure \ref{figtaskexecution}.
+ \begin{figure}[h]
+	\centering
+	\includegraphics[width=10cm]{Pictures/MRTA.png}
+	\caption{Visualization of task assignment and searching convergence} 
+	\label{figtaskexecution}
+\end{figure}
 
 \section*{Acknowledgments}
-Any particular assistance out of the ordinary may be acknowledged.  Please, do not use the numeral for the acknowledgements section. It is not necessary from the organisers' point of view to record the permission of the author's organisation to publish the paper or the information contained therein.
-
-\section*{References}
+This project is advised by Professor Jon Herman and most of the methods I used is from his courses \textbf{ECI 289i}. I very appreciate his great help and awesome course contents in and out of the class. 
+%\section*{References}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -142,8 +126,11 @@ Any particular assistance out of the ordinary may be acknowledged.  Please, do n
 \bibliography{eci289I-refs}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section*{Appendices}
+\section{Appendices}
+\subsection{Code of m robots m tasks allocation}
+	\lstinputlisting{Codes/MRTA.py}
 
-
+\subsection{Code of m robots execute n tasks}
+\lstinputlisting{Codes/Taskassign.py}
 
 \end{document}
